# vlscii

./: Cargo.toml  README.md  build.rs
src/: ascii.rs  braille.rs  decoder.rs  half_block.rs  main.rs  mapper.rs  renderer.rs  subtitles.rs  term.rs
